--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,8 +7,11 @@ export(delete_own_account)
 export(forgot_password)
 export(generate_personal_access_token)
 export(get_avatar)
+export(get_personal_access_tokens)
+export(get_preferences)
 export(get_presence)
 export(get_token)
+export(get_username_suggestion)
 export(info)
 export(list)
 export(regenerate_personal_access_token)
