prefixed with user_ to prevent namespace conflicts

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,6 @@ export(get_presence)
 export(get_token)
 export(get_username_suggestion)
 export(info)
-export(list)
 export(regenerate_personal_access_token)
 export(register)
 export(remove_personal_access_token)
@@ -21,8 +20,9 @@ export(reset_avatar)
 export(set_active_status)
 export(set_avatar)
 export(set_preferences)
-export(update)
 export(update_own_basic_information)
+export(user_list)
+export(user_update)
 export(users_presence)
 importFrom(httr,GET)
 importFrom(httr,POST)
